@@ -6,12 +6,13 @@ pts-core: Log lock_stat, config.gz, dmidecode to system logs
 pts-core: Only show Apple options when running on macOS
 pts-core: Add extra safeguard around FORCE_TIMES_TO_RUN for disabling dynamic run count
 ob_auto_compare: Intelligently choose more relevant reference results
-phodevi: macOS CPU monitoring support
+phodevi: macOS CPU temperature monitoring support
 phodevi: Support for reading WattsUp Pro power meter data directly without utility using WATTS_UP_METER=<USB TTY>
 phodevi: Report Google Compute Engine machine type as part of motherboard string
 phodevi: Add dumpe2fs to system logs when running on EXT4 and root
 phodevi: Add block size reporting
 phodevi: CPU power reporting for Ampere Altra
+phodevi: Various Ampere Altra hardware detection/reporting improvements
 
 Phoronix Test Suite 10.0.1
 21 October 2020
